bug fix (engine not showing up)
-Bug: the engine used didn't always show up in the results
-Issue: I was using a switch statement to check the key called "model" (for the engine) then setting the formattedEngine variable accordingly. However, the format of 'model' was inconsistent, so some cases fell through. (ie. some were 'text-curie:001" and some were 'text-curie-001'
-Solution: changed over to indexOf to search for a substring of the name instead. (ie. substring of 'curie' or 'babbage'

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,7 +23,7 @@
 
     &:hover,
     &:focus {
-    background-color: $mediumGreen;
+    background-color: $darkGreen;
     color: black;
     }
 
